# poetry-docker-example

./: Dockerfile  pyproject.toml
somerandomapp/: __main__.py  somerandomapi.py
