[tool.poetry]
name = "poetrydockerexample"
version = "0.1.0"
description = "An example using Poetry to build a Docker Image"
authors = ["Binx.io <info@binx.io>"]
packages = [
    { include = "somerandomapp" }
]

[tool.poetry.scripts]
somerandomapp = 'somerandomapp.somerandomapi:run'

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.3.2"
sanic-openapi = "^21.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
